(lang dune 3.3)
(implicit_transitive_deps true)

(package (name allocation_functor))
(package (name archive))
(package (name archive_hardfork_toolbox))
(package (name archive_blocks))
(package (name archive_lib))
(package (name base58_check))
(package (name best_tip_merger))
(package (name best_tip_prover))
(package (name bignum_bigint))
(package (name bindings_js))
(package (name blake2))
(package (name blockchain_snark))
(package (name block_producer))
(package (name block_time))
(package (name bootstrap_controller))
(package (name bowe_gabizon_hash))
(package (name cache_dir))
(package (name cache_lib))
(package (name child_processes))
(package (name cli))
(package (name cli_lib))
(package (name codable))
(package (name coda_genesis_ledger))
(package (name coda_genesis_proof))
(package (name comptime))
(package (name consensus))
(package (name crypto_params))
(package (name currency))
(package (name daemon_rpcs))
(package (name data_hash_lib))
(package (name disk_cache))
(package (name downloader))
(package (name dummy_values))
(package (name error_json))
(package (name extract_blocks))
(package (name fake_network))
(package (name fields_derivers))
(package (name filtered_external_transition))
(package (name generated_graphql_queries))
(package (name generate_keypair))
(package (name genesis_constants))
(package (name genesis_ledger_helper))
(package (name gossip_net))
(package (name graphql_basic_scalars))
(package (name graphql_lib))
(package (name graphql_wrapper))
(package (name hash_prefixes))
(package (name hash_prefix_states))
(package (name hash_prefix_create))
(package (name heap_usage))
(package (name hex))
(package (name init))
(package (name integers_stubs_js))
(package (name integration_test_local_engine))
(package (name integration_test_lib))
(package (name internal_tracing))
(package (name interpolator_lib))
(package (name interruptible))
(package (name itn_crypto))
(package (name itn_logger))
(package (name key_cache))
(package (name key_gen))
(package (name key_value_database))
(package (name kimchi_backend))
(package (name kimchi_backend_common))
(package (name kimchi_pasta_snarky_backend))
(package (name kimchi_bindings))
(package (name kimchi_pasta))
(package (name kimchi_types))
(package (name ledger_catchup))
(package (name ledger_proof))
(package (name libp2p_ipc))
(package (name linked_tree))
(package (name lmdb_storage))
(package (name logger))
(package (name logproc_lib))
(package (name merkle_address))
(package (name merkle_ledger))
(package (name merkle_ledger_tests))
(package (name merkle_list_prover))
(package (name merkle_list_verifier))
(package (name merkle_mask))
(package (name mina_automation))
(package (name mina_base))
(package (name mina_batch_txn))
(package (name mina_block))
(package (name mina_caqti))
(package (name mina_command_line_tests))
(package (name mina_commands))
(package (name mina_compile_config))
(package (name mina_debug))
(package (name mina_disk_caching_stats))
(package (name mina_generators))
(package (name mina_graphql))
(package (name mina_incremental))
(package (name mina_intf))
(package (name mina_ledger))
(package (name mina_ledger_export_benchmark))
(package (name mina_lib))
(package (name mina_lib_tests))
(package (name mina_lmdb_storage))
(package (name mina_metrics))
(package (name mina_net2))
(package (name mina_networking))
(package (name mina_node_config))
(package (name mina_numbers))
(package (name mina_plugins))
(package (name mina_runtime_config))
(package (name mina_signature_kind))
(package (name mina_snark_worker))
(package (name mina_state))
(package (name mina_stdlib))
(package (name mina_stdlib_unix))
(package (name mina_test_executive))
(package (name mina_transaction_logic))
(package (name mina_transaction))
(package (name mina_version))
(package (name mina_wire_types))
(package (name missing_blocks_auditor))
(package (name monad_lib))
(package (name multi_key_file_storage))
(package (name network_peer))
(package (name network_pool))
(package (name node_addrs_and_ports))
(package (name node_error_service))
(package (name node_status_service))
(package (name non_zero_curve_point))
(package (name o1trace))
(package (name o1trace_webkit_event))
(package (name one_or_two))
(package (name otp_lib))
(package (name outside_hash_image))
(package (name parallel))
(package (name parallel_scan))
(package (name participating_state))
(package (name pasta_bindings))
(package (name patch_archive_test))
(package (name perf_histograms))
(package (name pickles_base))
(package (name pickles))
(package (name pickles_types))
(package (name pipe_lib))
(package (name plonkish_prelude))
(package (name ppx_annot))
(package (name ppx_mina))
(package (name ppx_register_event))
(package (name ppx_representatives))
(package (name ppx_to_enum))
(package (name ppx_version))
(package (name precomputed_values))
(package (name promise))
(package (name proof_cache_tag))
(package (name proof_carrying_data))
(package (name protocol_version))
(package (name prover))
(package (name quickcheck_lib))
(package (name random_oracle_input))
(package (name random_oracle))
(package (name replayer))
(package (name rocksdb))
(package (name rocksdb_scanner))
(package (name rosetta_coding))
(package (name rosetta_lib))
(package (name rosetta_models))
(package (name run_in_thread))
(package (name secrets))
(package (name sgn))
(package (name sgn_type))
(package (name signature_lib))
(package (name snark_bits))
(package (name snark_keys_header))
(package (name snark_params))
(package (name snark_profiler_lib))
(package (name snark_worker))
(package (name snark_work_lib))
(package (name snarky_blake2))
(package (name snarky_curves))
(package (name snarky_field_extensions))
(package (name snarky_group_map))
(package (name snarky_log))
(package (name snarky_taylor))
(package (name sparse_ledger_lib))
(package (name staged_ledger_diff))
(package (name staged_ledger))
(package (name storage))
(package (name string_sign))
(package (name structured_log_events))
(package (name syncable_ledger))
(package (name sync_handler))
(package (name sync_status))
(package (name test_genesis_ledger))
(package (name test_util))
(package (name timeout_lib))
(package (name transaction_inclusion_status))
(package (name transaction_protocol_state))
(package (name transaction_snark))
(package (name transaction_snark_scan_state))
(package (name transaction_snark_tests))
(package (name transaction_snark_work))
(package (name transaction_witness))
(package (name transition_chain_prover))
(package (name transition_chain_verifier))
(package (name transition_frontier))
(package (name transition_frontier_base))
(package (name transition_frontier_controller))
(package (name transition_frontier_extensions))
(package (name transition_frontier_full_frontier))
(package (name transition_frontier_persistent_frontier))
(package (name transition_frontier_persistent_root))
(package (name transition_handler))
(package (name transition_router))
(package (name trust_system))
(package (name unsigned_extended))
(package (name uptime_service))
(package (name user_command_input))
(package (name validate_keypair))
(package (name verifier))
(package (name vinegar_base))
(package (name vinegar))
(package (name vinegar_types))
(package (name visualization))
(package (name vrf_evaluator))
(package (name vrf_lib))
(package (name vrf_lib_tests))
(package (name webkit_trace_event))
(package (name with_hash))
(package (name work_partitioner))
(package (name work_selector))
(package (name zkapp_command_builder))
(package (name zkapps_examples))
(package (name zkapp_limits))
(package (name zkapp_vk_cache_tag))
