opam-version: "2"
name: "error_json"
maintainer: "opensource@o1labs.org"
authors: ["O(1) Labs, LLC <opensource@o1labs.org>"]
homepage: "https://github.com/MinaProtocol/mina"
bug-reports: "https://github.com/MinaProtocol/mina/issues"
dev-repo: "https://github.com/MinaProtocol/mina.git"
license: "Apache"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "base"
  "yojson"
  "ppx_deriving_yojson"
  "dune"
  "ppx_version"
]
synopsis: "JSON encoding for Base.Error.t"
description: "
Yojson encoding helpers for the s-expression type and for Base's Info.t and
Error.t types.
"

