opam-version: "2"
name: "inline_test_quiet_logs"
maintainer: "opensource@o1labs.org"
authors: ["O(1) Labs, LLC <opensource@o1labs.org>"]
homepage: "https://github.com/MinaProtocol/mina"
bug-reports: "https://github.com/MinaProtocol/mina/issues"
dev-repo: "https://github.com/MinaProtocol/mina.git"
license: "Apache"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "base"
  "ppx_inline_test"
  "dune"
  "ppx_version"
  "bisect_ppx"
]
synopsis: "Shadowing interface to hide stdout output for passing tests"
description: "
Exposes the same interface as ppx_inline_test's runner, but caches the stdout
while tests are run and only outputs it at the end if there was a failure.

To use, simply `open Inline_test_quiet_logs` at the top of the file with the
inline tests to be silenced.
"

