opam-version: "2"
name: "marlin_plonk_bindings"
maintainer: "opensource@o1labs.org"
authors: ["O(1) Labs, LLC <opensource@o1labs.org>"]
homepage: "https://github.com/MinaProtocol/mina"
bug-reports: "https://github.com/MinaProtocol/mina/issues"
dev-repo: "https://github.com/MinaProtocol/mina.git"
license: "Apache"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "base"
  "dune"                {build & >= "2.0"}
]
synopsis: "Bindings for marlin and plonk"
description: "
Bindings for marlin and plonk zero-knowledge proof systems, backed by the rust
implementation
"

