opam-version: "2"
name: "mina_user_error"
maintainer: "opensource@o1labs.org"
authors: ["O(1) Labs, LLC <opensource@o1labs.org>"]
homepage: "https://github.com/CodaProtocol/coda"
bug-reports: "https://github.com/CodaProtocol/coda/issues"
dev-repo: "https://github.com/CodaProtocol/coda.git"
license: "Apache"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "base"
  "dune"
  "ppx_version"
]
synopsis: "JSON encoding for Base.Error.t"
description: "
Yojson encoding helpers for the s-expression type and for Base's Info.t and
Error.t types.
"

