opam-version: "2"
name: "snark_keys_header"
maintainer: "opensource@o1labs.org"
authors: ["O(1) Labs, LLC <opensource@o1labs.org>"]
homepage: "https://github.com/MinaProtocol/mina"
bug-reports: "https://github.com/MinaProtocol/mina/issues"
dev-repo: "https://github.com/MinaProtocol/mina.git"
license: "Apache"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "core_kernel"
  "dune"                {build & >= "2.0"}
  "ppx_version"
  "ppx_deriving_yojson"
  "ppx_sexp_conv"
  "ppx_inline_test"
  "ppx_let"
  "unsigned_extended"
]
synopsis: "Headers for mina snark keys"
description: "
Headers for mina snark key files and related files, exposing relevant data in a
JSON-formatted object
"

