[package]
name = "zcash_proofs"
version = "0.0.0"
authors = [
    "Jack Grigg <jack@z.cash>",
]
edition = "2018"

[dependencies]
bellman = { path = "../bellman" }
blake2b_simd = "0.5"
byteorder = "1"
directories = { version = "1", optional = true }
ff = { path = "../ff" }
pairing = { path = "../pairing" }
rand_os = "0.2"
zcash_primitives = { path = "../zcash_primitives" }

[dev-dependencies]
rand_core = "0.5"
rand_xorshift = "0.2"

[features]
default = ["local-prover"]
local-prover = ["directories"]
