package(default_visibility = ["//visibility:public"])

config_setting(
    name = "linux",
    constraint_values = [
        "@platforms//os:linux",
    ]
)

config_setting(
    name = "linux_x64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ]
)

config_setting(
    name = "macos",
    constraint_values = ["@platforms//os:macos"]
)

config_setting(
    name = "m32",
    constraint_values = [
        "@platforms//cpu:x86_32",
    ]
)

config_setting(
    name = "m64",
    constraint_values = [
        "@platforms//cpu:x86_64",
    ]
)
